--- a/1.ChooseATopicArea.md
+++ b/1.ChooseATopicArea.md
@@ -6,17 +6,17 @@ For each of the items below, an example response from *The Craft of Research* is
 
 ## State a broad topic as a phrase of 4 or 5 words. 
 ```
-the history of commercial aviation
+The safety of expert systems
 ```
 
 ## Narrow that broad topic by adding words that express actions or relationships. 
 ```
-the contribution of the military in developing the DC-3 in the early years of commercial aviation
+The safety of using expert systems that can think
 ```
 
 ## Turn this expanded phrase into a full sentence that describes your research topic.  
 
 If you can, try to interest your audience with a **claim**-- a sentence that asserts something that might or might not be true. If you are not ready to make a claim, that can come later.
 ```
-In the early years of commercial aviation, the military contributed to the way the DC-3 developed.
+The imitation game proves computers can think however expert systems should not take the place of humans because it is not safe. 
 ```
