--- a/2.PreliminaryInvestigation.md
+++ b/2.PreliminaryInvestigation.md
@@ -39,7 +39,27 @@ Here are some suggestions for brainstorming questions about your topic. In the s
 - [ ] Consider "what if?" or other speculative questions.
 
 ```
-Put brainstorm questions here
+can computers really think
+what does it mean to think
+what is consciousness
+do expert systems have consciousness 
+could expert systems ever really have true consciousness
+is consciousness a good thing or bad thing 
+what are the limitations of computers 
+what are the risk of expert systems
+what if we could eliminate the risk related to expert systems replacing humans
+how are expert systems different than humans
+what are the benefits of expert systems replacing humans
+why should expert systems replace humans
+how can humans be better than computers
+how safe are humans
+how safe can expert systems be made 
+can expert systems ever have personalities
+what are the issues with smart cars
+what are the issues with cruise control 
+what are the issues with expert systems in hospitals
+what are the benefits of expert systems in hospitals
+what are the benefits of smart cars
 ```
 
 ### Evaluate the questions
@@ -56,7 +76,15 @@ Some of the questions you brainstormed will be better than others. Here are some
 In the space below, record the stronger questions, which you will use to guide you. (Suggestion: cut the stronger questions from the brainstorming list above, and paste them here. Leave the weaker questions in place above in case you need to return to them.)
 
 ```
-Put stronger questions here
+what is consciousness and do expert systems have consciousness ?
+what are the limitations  and risk of expert systems? 
+what does it mean to think and can computers think?
+what are the issues and benefits  of expert systems in hospitals?
+what are the issues and benefits of cruise control and smart cars? 
+what if we could eliminate the risk related to expert systems replacing humans?
+how are expert systems different than humans?
+what are the benefits and risks of expert systems replacing humans?
+
 ```
 
 ## From question to claim
