--- a/3.StateYourClaim.md
+++ b/3.StateYourClaim.md
@@ -7,5 +7,5 @@ A precise claim uses specific language and avoids vague descriptions.
 A significant claim is one whose truth matters to your audience. 
 
 ```
-Replace this text with your precise, significant claim.
+The imitation game proves computers can think however expert system should not take the place of humans because it is not safe.
 ```
